[project]
name = "agbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.9",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "mcstatus>=12.0.1",
    "openai>=1.84.0",
    "ping3>=4.0.8",
    "psutil>=7.0.0",
]
