[project]
name = "agbot2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles",
    "aiohttp",
    "jinja2",
    "loguru",
    "mcstatus",
    "openai",
    "ping3",
    "playwright",
    "psutil",
    "pydantic",
]
